--- a/css/style_login.css
+++ b/css/style_login.css
@@ -2,56 +2,56 @@
 
 .login-page {
   width: 360px;
-  padding: 8% 0 0;
   margin: auto;
+  padding: 8% 0 0;
 }
 
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
+  background: #ffffff;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 .form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
   width: 100%;
-  border: 0;
   margin: 0 0 15px;
   padding: 15px;
-  box-sizing: border-box;
+  border: 0;
+  outline: 0;
+  background: #f2f2f2;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 .form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
   width: 100%;
-  border: 0;
   padding: 15px;
-  color: #FFFFFF;
+  border: 0;
+  outline: 0;
+  background: #4caf50;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
-  -webkit-transition: all 0.3 ease;
+  color: #ffffff;
+  text-transform: uppercase;
   transition: all 0.3 ease;
+  -webkit-transition: all 0.3 ease;
   cursor: pointer;
 }
 
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #43a047;
 }
 
 .form .message {
   margin: 15px 0 0;
-  color: #b3b3b3;
   font-size: 12px;
+  color: #b3b3b3;
 }
 
 .form .message a {
@@ -71,9 +71,9 @@
 }
 
 .container:before, .container:after {
-  content: "";
   display: block;
   clear: both;
+  content: "";
 }
 
 .container .info {
@@ -90,8 +90,8 @@
 }
 
 .container .info span {
-  color: #4d4d4d;
   font-size: 12px;
+  color: #4d4d4d;
 }
 
 .container .info span a {
@@ -100,16 +100,16 @@
 }
 
 .container .info span .fa {
-  color: #EF3B3A;
+  color: #ef3b3a;
 }
 
 body {
   background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: -webkit-linear-gradient(right, #76b852, #8dc26f);
+  background: -moz-linear-gradient(right, #76b852, #8dc26f);
+  background: -o-linear-gradient(right, #76b852, #8dc26f);
+  background: linear-gradient(to left, #76b852, #8dc26f);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;    
 }
