--- a/css/style_button.css
+++ b/css/style_button.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 html, body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -34,7 +33,7 @@ html, body {
   left: calc(50% - 32px);
   width: 64px;
   height: 64px;
-  fill: white;
+  color: #ffffff;
   opacity: 0;
 }
 
@@ -260,7 +259,7 @@ html, body {
     top: 0px;
   }
 }
-=======
+
 html, body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -296,7 +295,7 @@ html, body {
   left: calc(50% - 32px);
   width: 64px;
   height: 64px;
-  fill: white;
+  color: #ffffff;
   opacity: 0;
 }
 
@@ -522,4 +521,3 @@ html, body {
     top: 0px;
   }
 }
->>>>>>> fd6e8b0e03d84e60c1d64e1eadfaf3a9a7f77c6e
